--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,11 @@
       <div id="search-menu">
         <h1>Search for Food</h1>
         <input type="text" id="location" placeholder="Enter location">
+        <input type="text" id="price" placeholder="Enter price"> 
+        <!-- range slider -->
+        <input type="range" id="range-slider" min="1" max="25" value="5" step="1">
+        <p>Current Range (Miles): <span id="currentRange">5</span></p>
+        <!-- end of range slider -->
         <button id="searchButton">Search</button>
       </div>
       <button id="startNewSearch" style="display: none;">Start New Search</button>
