--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,12 @@
       <div id="search-menu">
         <h1>Search for Food</h1>
         <input type="text" id="location" placeholder="Enter location">
-        <input type="text" id="price" placeholder="Enter price"> 
+        <div class="price-range">
+          <div class="price-level" id="level1"> $</div>
+          <div class="price-level" id="level2"> $</div>
+          <div class="price-level" id="level3"> $</div>
+          <div class="price-level" id="level4"> $</div>
+        </div>
         <!-- range slider -->
         <input type="range" id="range-slider" min="1" max="25" value="5" step="1">
         <p>Current Range (Miles): <span id="currentRange">5</span></p>
