Added a loading wheel while waiting for response

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,14 @@
         <p>Current Range (Miles): <span id="currentRange">5</span></p>
         <!-- end of range slider -->
         <button id="searchButton">Search</button>
+      </div> 
+      <!-- new search button -->
+      <button id="startNewSearch" style="display: none;">Start New Search</button> 
+      <!-- loading wheel -->
+      <div id="loading-div" style="display: none;">
+        <div class="loading-wheel"></div>
       </div>
+      <!-- new search button -->
       <button id="startNewSearch" style="display: none;">Start New Search</button>
       <div id="results" style="display: none;">
         <!-- Results content will be displayed here -->
