--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,7 @@
         </div>
         <!-- range slider -->
         <input type="range" id="range-slider" min="1" max="25" value="5" step="1">
-        <p>Current Range (Miles): <span id="currentRange">5</span></p>
+        <p>Current Range (Miles): <span id="current-range">5</span></p>
         <!-- end of range slider -->
         <button id="searchButton">Search</button>
       </div> 
@@ -28,11 +28,10 @@
       <div id="loading-div" style="display: none;">
         <div class="loading-wheel"></div>
       </div>
-      <!-- new search button -->
-      <button id="startNewSearch" style="display: none;">Start New Search</button>
       <div id="results" style="display: none;">
         <!-- Results content will be displayed here -->
       </div>
+      <button id="reroll" style="display: none;">Re-Roll</button>
     </div>
 </body>
 </html>
