Added food type dropdown option

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,23 @@
       <div id="search-menu">
         <h1>Search for Food</h1>
         <input type="text" id="location" placeholder="Enter location">
+        <select id="type-options">
+          <option value="Restaurant">Any</option>
+          <option value="Fast Food">Fast Food</option>
+          <option value="Breakfast Restaurant">Breakfast</option>
+          <option value="Buffet Restaurant">Buffet</option>
+          <option value="Pizza Restaurant">Pizza</option>
+          <option value="Seafood Restaurant">Seafood</option>
+          <option value="American Restaurant">American</option>
+          <option value="Mexican Restaurant">Mexican</option>
+          <option value="Chinese Restaurant">Chinese</option>
+          <option value="Italian Restaurant">Italian</option>
+          <option value="Indian Restaurant">Indian</option>
+          <option value="Mediterranean Restaurant">Mediterranean</option>
+          <option value="Greek Restaurant">Greek</option>
+          <option value="Coffee Shop">Coffee</option>
+          <option value="Dessert Restaurant">Dessert</option>
+        </select>
         <div class="price-range">
           <div class="price-level" id="level1"> $</div>
           <div class="price-level" id="level2"> $</div>
